# temp_ctts_impl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  azure.cpp  azure.h  azure_config_file.h  azure_config_widget.h  azure_service.h  ctts.cpp  ctts_config_window.cpp  ctts_config_window.h  ctts_current_service.h  ctts_main_window.cpp  ctts_main_window.h  ctts_mainwindow.cpp  ctts_mainwindow.h  dummy.h  global_network_access_manager.h  service.h  service_azure.cpp  service_azure.h  service_azure_config_ui.h  tts_service.h  voice.hurl
